--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        app:srcCompat="@drawable/ic_camera_retake"
+        app:srcCompat="@drawable/ic_camera"
         app:backgroundTint="@color/orange_500"
         app:tint="@color/white"
         app:layout_constraintTop_toTopOf="parent"
@@ -81,7 +81,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="32dp"
-        app:srcCompat="@drawable/ic_analyze_send"
+        app:srcCompat="@drawable/ic_send"
         app:backgroundTint="@color/orange_500"
         app:tint="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
